--- a/plugin.xml
+++ b/plugin.xml
@@ -29,6 +29,6 @@
 	</config-file>
 
 	<header-file src="src/ios/generateIDcode.h" />
-	<source-file src="src/ios/generateIDcode.h" />
+	<source-file src="src/ios/generateIDcode.m" />
 </platform>
 </plugin>
