--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-	id="cordova-plugin-idcode" version="0.0.3">
+	id="cordova-plugin-md5-idcode" version="0.0.4">
 
 <name>generate identification code</name>
 
